--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -67,7 +67,9 @@
       items:
         - name: 認証と承認
           href: time-series-insights-authentication-and-authorization.md
-        - name: C# によるデータのクエリ
+        - name: C# を使用してデータのクエリを実行する - Gen2
+          href: time-series-insights-update-query-data-csharp.md
+        - name: C# を使用してデータのクエリを実行する - Gen1
           href: time-series-insights-query-data-csharp.md
         - name: C# での参照データの管理
           href: time-series-insights-manage-reference-data-csharp.md
