commit translated contents

--- a/articles/azure-netapp-files/TOC.yml
+++ b/articles/azure-netapp-files/TOC.yml
@@ -43,7 +43,7 @@
               href: solutions-benefits-azure-netapp-files-oracle-database.md
             - name: 電子設計自動化に Azure NetApp Files を使用するメリット
               href: solutions-benefits-azure-netapp-files-electronic-design-automation.md
-            - name: Azure NetApp Files で Windows Virtual Desktop を使用する
+            - name: Windows Virtual Desktop での Azure NetApp Files 利用のメリット
               href: solutions-windows-virtual-desktop.md
     - name: Azure NetApp Files についての FAQ
       href: azure-netapp-files-faqs.md
