commit translated contents

--- a/articles/advisor/toc.yml
+++ b/articles/advisor/toc.yml
@@ -19,15 +19,15 @@
       href: advisor-get-started.md
 - name: 操作方法ガイド
   items:
-    - name: Azure アプリケーションの信頼性の向上
+    - name: '[信頼性]'
       href: advisor-high-availability-recommendations.md
-    - name: リソースのセキュリティを強化する
+    - name: セキュリティ
       href: advisor-security-recommendations.md
-    - name: Azure アプリケーションのパフォーマンスの向上
+    - name: パフォーマンス効率
       href: advisor-performance-recommendations.md
-    - name: サービス コストの削減
+    - name: コストの最適化
       href: advisor-cost-recommendations.md
-    - name: オペレーショナル エクセレンスの実現
+    - name: オペレーショナル エクセレンス
       href: advisor-operational-excellence-recommendations.md
     - name: 推奨事項の構成
       href: view-recommendations.md
@@ -35,6 +35,8 @@
       href: permissions.md
     - name: 推奨事項のアラートの構成
       href: advisor-alerts-portal.md
+    - name: 推奨事項の概要を構成する
+      href: advisor-recommendations-digest.md
     - name: 推奨事項の一括修復
       href: advisor-quick-fix.md
     - name: Azure Resource Graph の Advisor データ
