--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -248,6 +248,8 @@
           href: manage/cost-management-budget-scenario.md
         - name: コストのアラートの使用
           href: costs/cost-mgt-alerts-monitor-usage-spending.md
+        - name: コストを割り当てる
+          href: costs/allocate-costs.md
         - name: Power BI Desktop を使用して接続する
           href: /power-bi/desktop-connect-azure-cost-management
         - name: Power BI テンプレート アプリを使用して Azure のコストを分析する
