--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -654,13 +654,19 @@
                   href: app/opencensus-python-dependency.md
                 - name: Requests
                   href: app/opencensus-python-request.md
-            - name: Web ページ
+            - name: JavaScript
               items:
                 - name: クライアント側の JavaScript
                   displayname: 'SPA, Single Page Applications, React, JS, Angular'
                   href: app/javascript.md
                 - name: JavaScript のソース マップ
                   href: app/source-map-support.md
+                - name: プラグイン
+                  items:
+                    - name: React プラグイン
+                      href: app/javascript-react-plugin.md
+                    - name: React Native プラグイン
+                      href: app/javascript-react-native-plugin.md
                 - name: トラブルシューティング
                   items:
                     - name: SDK 読み込みエラー
