--- a/articles/key-vault/certificates/index.yml
+++ b/articles/key-vault/certificates/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 04/07/2020
-  ms.openlocfilehash: 365f0b07370937a73d3925373be0be544a182865
-  ms.sourcegitcommit: 5b8fb60a5ded05c5b7281094d18cf8ae15cb1d55
+  ms.openlocfilehash: be76cd9d3c358864d1278cad77be43048dec7a71
+  ms.sourcegitcommit: 64ad2c8effa70506591b88abaa8836d64621e166
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "87386777"
+  ms.lasthandoff: 08/17/2020
+  ms.locfileid: "88263454"
 landingContent:
 - title: 証明書
   linkLists:
@@ -46,6 +46,18 @@ landingContent:
       url: quick-create-python.md
     - text: Key Vault に証明書をインポートする
       url: tutorial-import-certificate.md
+- title: Key Vault 証明書用クライアント ライブラリ
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: .NET クライアント ライブラリ
+      url: /dotnet/api/azure.security.keyvault.certificates?view=azure-dotnet
+    - text: Python クライアント ライブラリ
+      url: /python/api/overview/azure/keyvault-certificates-readme?view=azure-python
+    - text: Java クライアント ライブラリ
+      url: https://azuresdkdocs.blob.core.windows.net/$web/java/azure-security-keyvault-certificates/4.2.0/index.html
+    - text: Node.js クライアント ライブラリ
+      url: /javascript/api/@azure/keyvault-certificates/?view=azure-node-latest
 - title: Key Vault の詳細
   linkLists:
   - linkListType: overview
