--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -118,6 +118,19 @@
       items:
         - name: ストレージ アカウント
           href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: 承認
+          items:
+            - name: データ操作の承認
+              href: ../common/storage-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              items:
+                - name: Azure AD による承認
+                  href: ../common/storage-auth-aad.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: 共有キーによる承認
+                  href: /rest/api/storageservices/authorize-with-shared-key
+                - name: Shared Access Signature (SAS) によるアクセスの委任
+                  href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 管理操作の承認
+              href: ../common/authorization-resource-provider.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: セキュリティ
           items:
             - name: セキュリティに関する推奨事項
@@ -131,17 +144,6 @@
                   href: ../common/encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: 要求でのカスタマー指定のキー
                   href: ../common/encryption-customer-provided-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: データ操作の承認
-              href: ../common/storage-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-              items:
-                - name: Azure AD による承認
-                  href: ../common/storage-auth-aad.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 共有キーによる承認
-                  href: /rest/api/storageservices/authorize-with-shared-key
-                - name: Shared Access Signature (SAS) によるアクセスの委任
-                  href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 管理操作の承認
-              href: ../common/authorization-resource-provider.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 不変 BLOB
               href: storage-blob-immutable-storage.md
             - name: 高度な脅威保護
@@ -313,64 +315,64 @@
               href: storage-blob-properties-metadata.md
             - name: BLOB のコピー (.NET)
               href: storage-blob-copy.md
+        - name: BLOB データへのアクセスの承認
+          items:
+            - name: ユーザーの承認オプション
+              items:
+                - name: ポータル
+                  href: ../common/storage-access-blobs-queues-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: PowerShell
+                  href: ../common/authorize-active-directory-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Azure CLI
+                  href: ../common/authorize-data-operations-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: RBAC を使用したアクセス権の管理
+              items:
+                - name: ポータル
+                  href: ../common/storage-auth-aad-rbac-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: PowerShell
+                  href: ../common/storage-auth-aad-rbac-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Azure CLI
+                  href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Azure AD を使用した認証と承認
+              items:
+                - name: マネージド ID を使用した承認
+                  href: ../common/storage-auth-aad-msi.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: アプリケーションからの承認
+                  href: ../common/storage-auth-aad-app.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 共有キーによる承認
+              items:
+                - name: アカウント キーの表示と管理
+                  href: ../common/storage-account-keys-manage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: 接続文字列の構成
+                  href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: Azure Storage REST API の使用
+                  href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: Shared Access Signature (SAS) によるアクセスの委任
+              items:
+                - name: ユーザーの委任 SAS の作成
+                  items:
+                    - name: PowerShell
+                      href: storage-blob-user-delegation-sas-create-powershell.md
+                    - name: Azure CLI
+                      href: storage-blob-user-delegation-sas-create-cli.md
+                    - name: .NET
+                      href: storage-blob-user-delegation-sas-create-dotnet.md
+                - name: サービス SAS の作成 (.NET)
+                  href: storage-blob-service-sas-create-dotnet.md
+                - name: アカウント SAS の作成 (.NET)
+                  href: ../common/storage-account-sas-create-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: 保存されているアクセス ポリシーの定義
+                  href: ../common/storage-stored-access-policy-define-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: BLOB データへの匿名読み取りアクセスを管理する
+              items:
+                - name: コンテナーと BLOB 用の匿名読み取りアクセスを構成する
+                  href: anonymous-read-access-configure.md
+                - name: BLOB データへの匿名読み取りアクセスを禁止する
+                  href: anonymous-read-access-prevent.md
+                - name: パブリック コンテナーと BLOB に匿名でアクセスする (.NET)
+                  href: anonymous-read-access-client.md
         - name: BLOB データのセキュリティ保護
           items:
-            - name: BLOB データへのアクセスの承認
-              items:
-                - name: ユーザーの承認オプション
-                  items:
-                    - name: ポータル
-                      href: ../common/storage-access-blobs-queues-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: PowerShell
-                      href: ../common/authorize-active-directory-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: Azure CLI
-                      href: ../common/authorize-data-operations-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: RBAC を使用したアクセス権の管理
-                  items:
-                    - name: ポータル
-                      href: ../common/storage-auth-aad-rbac-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: PowerShell
-                      href: ../common/storage-auth-aad-rbac-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: Azure CLI
-                      href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: Azure AD を使用した認証と承認
-                  items:
-                    - name: マネージド ID を使用した承認
-                      href: ../common/storage-auth-aad-msi.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: アプリケーションからの承認
-                      href: ../common/storage-auth-aad-app.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 共有キーによる承認
-                  items:
-                    - name: アカウント キーの表示と管理
-                      href: ../common/storage-account-keys-manage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: 接続文字列の構成
-                      href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: Azure Storage REST API の使用
-                      href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: Shared Access Signature (SAS) によるアクセスの委任
-                  items:
-                    - name: ユーザーの委任 SAS の作成
-                      items:
-                        - name: PowerShell
-                          href: storage-blob-user-delegation-sas-create-powershell.md
-                        - name: Azure CLI
-                          href: storage-blob-user-delegation-sas-create-cli.md
-                        - name: .NET
-                          href: storage-blob-user-delegation-sas-create-dotnet.md
-                    - name: サービス SAS の作成 (.NET)
-                      href: storage-blob-service-sas-create-dotnet.md
-                    - name: アカウント SAS の作成 (.NET)
-                      href: ../common/storage-account-sas-create-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: 保存されているアクセス ポリシーの定義
-                      href: ../common/storage-stored-access-policy-define-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: BLOB データへの匿名読み取りアクセスを管理する
-                  items:
-                    - name: コンテナーと BLOB 用の匿名読み取りアクセスを構成する
-                      href: anonymous-read-access-configure.md
-                    - name: BLOB データへの匿名読み取りアクセスを禁止する
-                      href: anonymous-read-access-prevent.md
-                    - name: パブリック コンテナーと BLOB に匿名でアクセスする (.NET)
-                      href: anonymous-read-access-client.md
             - name: Azure Storage の暗号化の管理
               items:
                 - name: BLOB が暗号化されているかどうかの確認
@@ -660,7 +662,7 @@
           href: data-lake-storage-best-practices.md
         - name: クエリの高速化
           href: data-lake-storage-query-acceleration.md
-        - name: Architecture
+        - name: アーキテクチャ
           items:
             - name: Hadoop 用 Azure BLOB ファイル システム ドライバー
               href: data-lake-storage-abfs-driver.md
