--- a/articles/azure-sql/managed-instance/index.yml
+++ b/articles/azure-sql/managed-instance/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.author: mathoma
   ms.reviewer: carlrab
   ms.date: 05/27/2020
-  ms.openlocfilehash: 33d6acf888c7335c282e53201e6219e4e044cc8e
-  ms.sourcegitcommit: 1aef4235aec3fd326ded18df7fdb750883809ae8
+  ms.openlocfilehash: 6c02f1f12ed32cbced046f9937d4b8a28d74f97a
+  ms.sourcegitcommit: 02ca0f340a44b7e18acca1351c8e81f3cca4a370
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/12/2020
-  ms.locfileid: "88136288"
+  ms.lasthandoff: 08/19/2020
+  ms.locfileid: "88590423"
 landingContent:
 - title: Azure SQL Managed Instance
   linkLists:
@@ -25,6 +25,10 @@ landingContent:
     links:
     - text: SQL マネージド インスタンスの作成
       url: instance-create-quickstart.md
+  - linkListType: video
+    links:
+    - text: Azure SQL Managed Instance の概要
+      url: https://channel9.msdn.com/Series/Azure-SQL-for-Beginners/Azure-SQL-Managed-Instance-Overview-6-of-61
   - linkListType: concept
     links:
     - text: 新機能
@@ -61,12 +65,22 @@ landingContent:
       url: ../database/dynamic-data-masking-overview.md
     - text: パブリック エンドポイント
       url: public-endpoint-overview.md
-- title: リファレンス
+- title: Azure SQL について学習する
   linkLists:
   - linkListType: learn
     links:
+    - text: 初心者向け Azure SQL
+      url: https://aka.ms/azuresql4beginners
+    - text: Azure SQL の基礎
+      url: https://docs.microsoft.com/learn/paths/azure-sql-fundamentals/
+    - text: Azure SQL のハンズオン ラボ
+      url: https://aka.ms/asqlworkshop
+    - text: Azure SQL の短期集中講座
+      url: https://aka.ms/azuresqlbootcamp
     - text: 学習用 SQL リソース
       url: /sql/sql-server/educational-sql-resources
+- title: リファレンス
+  linkLists:
   - linkListType: deploy
     links:
     - text: Azure CLI のサンプル
