--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -71,9 +71,6 @@
       items:
         - name: アセット
           href: assets-concept.md
-        - name: アセットの管理
-          href: manage-asset-concept.md
-          displayName: 'name, naming, file name, upload, output, download'
     - name: ファイルの処理
       items:
         - name: 変換およびジョブ
@@ -222,20 +219,14 @@
   items:
     - name: はじめに
       items:
-        - name: アカウントを作成する
+        - name: Azure サブスクリプションを検索する
+          href: how-to-set-azure-subscription.md
+        - name: Media Services アカウントを作成する
           href: create-account-howto.md
           displayName: 'portal, cli, storage'
-        - name: アカウント資格情報のリセット
-          href: cli-reset-account-credentials.md
         - name: API へのアクセス
           displayName: 'portal, cli'
           href: access-api-howto.md
-        - name: メディア占有ユニットをスケーリングする
-          href: media-reserved-units-cli-how-to.md
-        - name: アセットを作成する
-          href: cli-create-asset.md
-    - name: 開発者ガイド
-      items:
         - name: REST を使用した開発
           items:
             - name: Postman を使用して接続する
@@ -250,6 +241,15 @@
               href: configure-connect-nodejs-howto.md
             - name: Python を使用して接続する
               href: configure-connect-python-howto.md
+        - name: アカウントの資格情報をリセットする
+          href: cli-reset-account-credentials.md
+    - name: アセットの作成と管理
+      items:
+        - name: アセットを作成する
+          href: cli-create-asset.md
+        - name: アセットの管理
+          href: manage-asset-concept.md
+          displayName: 'name, naming, file name, upload, output, download'
     - name: コンテンツをアップロードする
       items:
         - name: HTTPS から
@@ -282,6 +282,8 @@
           displayName: 'encode, encoding'
           href: job-input-from-local-file-how-to.md
         - name: カスタム変換を使用してエンコードする
+        - name: メディア占有ユニットをスケーリングする
+          href: media-reserved-units-cli-how-to.md
           items:
             - name: .NET の場合
               displayName: 'encode, encoding, custom, transform'
