--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -246,10 +246,7 @@
     - name: アセットの作成と管理
       items:
         - name: アセットを作成する
-          href: cli-create-asset.md
-        - name: アセットの管理
-          href: manage-asset-concept.md
-          displayName: 'name, naming, file name, upload, output, download'
+          href: how-to-create-asset.md
     - name: コンテンツをアップロードする
       items:
         - name: HTTPS から
