--- a/articles/virtual-machines/troubleshooting/index.yml
+++ b/articles/virtual-machines/troubleshooting/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: genlin
   ms.author: genli
   ms.date: 09/09/2019
-  ms.openlocfilehash: ca49aafcfa4911c97cff4a9187184ba420cd76da
-  ms.sourcegitcommit: c28fc1ec7d90f7e8b2e8775f5a250dd14a1622a6
+  ms.openlocfilehash: 24f3dbc550f04d9b25c1c15e2878523c1a3df805
+  ms.sourcegitcommit: 271601d3eeeb9422e36353d32d57bd6e331f4d7b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/13/2020
-  ms.locfileid: "88168254"
+  ms.lasthandoff: 08/20/2020
+  ms.locfileid: "88651031"
 landingContent:
 - title: デプロイ エラーのトラブルシューティング
   linkLists:
@@ -108,9 +108,9 @@ landingContent:
     - text: VM のサイズを変更するときの割り当てエラーのトラブルシューティング
       url: ./allocation-failure.md
     - text: VM の一時ドライブについて
-      url: ../windows/managed-disks-overview.md#temporary-disk
+      url: ../managed-disks-overview.md#temporary-disk
     - text: Azure Managed Disks の概要
-      url: ../windows/managed-disks-overview.md
+      url: ../managed-disks-overview.md
 - title: ディスクの暗号化の問題
   linkLists:
   - linkListType: how-to-guide
