--- a/articles/virtual-machines/troubleshooting/linux-index.yml
+++ b/articles/virtual-machines/troubleshooting/linux-index.yml
@@ -10,12 +10,12 @@ metadata:
   author: genlin
   ms.author: genli
   ms.date: 09/09/2019
-  ms.openlocfilehash: b78ce7baf60431e0f9ee1b1218d2d57019b35359
-  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
+  ms.openlocfilehash: 78310d35361a3c34992e9fb3f08d8432b4ec4fb8
+  ms.sourcegitcommit: 271601d3eeeb9422e36353d32d57bd6e331f4d7b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/23/2020
-  ms.locfileid: "87068972"
+  ms.lasthandoff: 08/20/2020
+  ms.locfileid: "88650526"
 landingContent:
 - title: デプロイ エラーのトラブルシューティング
   linkLists:
@@ -92,9 +92,9 @@ landingContent:
     - text: VM のサイズを変更するときの割り当てエラーのトラブルシューティング
       url: ./allocation-failure.md
     - text: VM の一時ドライブについて
-      url: ../linux/managed-disks-overview.md#temporary-disk
+      url: ../managed-disks-overview.md#temporary-disk
     - text: Azure Managed Disks の概要
-      url: ../linux/managed-disks-overview.md
+      url: ../managed-disks-overview.md
     - text: Azure VM ディスクと Premium マネージド ディスクおよびアンマネージド ディスクについての FAQ
       url: ../linux/convert-unmanaged-to-managed-disks.md
 - title: ディスクの暗号化の問題
