--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -22,6 +22,8 @@
       href: concepts-twins-graph.md
     - name: クエリ言語
       href: concepts-query-language.md
+    - name: クエリ単位
+      href: concepts-query-units.md
     - name: 他のサービスとの統合
       href: concepts-integration.md
     - name: イベント ルート
